# cognito

./: Cargo.toml  LICENSE  README.md  configurations.yaml
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cli/src/args/: mod.rs
cli/src/args/prompt/: mod.rs
cli/src/args/utils/: mod.rs
cli/src/client/: mod.rs
cli/src/clipboard/: mod.rs
cli/src/config/: mod.rs
cli/src/constants/: mod.rs
cli/src/env/: mod.rs
cli/src/logger/: mod.rs
cli/src/prompt/: mod.rs
cli/src/repl/: mod.rs
logger/: Cargo.toml  demo.webm
logger/src/: lib.rs
scripts/: dev.sh
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/configurations/: mod.rs
server/src/middlewares/: logger.rs
server/src/routes/: mod.rs
server/src/routes/health_check/: mod.rs
server/src/routes/process_prompt/: mod.rs
server/src/services/openai/: chats.rs  config.rs  messages.rs  mod.rs
server/src/utils/: configs.rs  constants.rs  mod.rs
