[workspace]
members = [
    "cli", 
    "logger", 
    "server"
]

resolver = "2"

[workspace.dependencies]
log = "0.4.21"
tokio = { version = "1.38.0", features = ["full"] }
reqwest = "0.12.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_derive = "1.0.203"
serde_json = "1.0.118"
dotenv = "0.15.0"
dirs = "5.0.1"
