[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "cli"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
lazy_static = "1.5.0"
logger = { path = "../logger" }
log = { workspace = true }
rustyline = "14.0.0"
tokio = { workspace = true }
reqwest = { workspace = true }
dirs = "5.0.1"
dotenv = "0.15.0"
