[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "server"

[dependencies]
logger = { path = "../logger" }
log = { workspace = true }
tokio = { workspace = true }
async-openai = "0.23.3"
actix-web = "4.8.0"
config = "0.14.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_derive = "1.0.203"
reqwest = { workspace = true }
